(executable
 (name grep_dump)
 (libraries str)
 (modules grep_dump))

(rule
 (targets backend_attributes.output.corrected)
 (deps backend_attributes.ml grep_dump.exe)
 (action
  (progn
   (with-outputs-to
    backend_attributes.output.raw
    (run %{bin:ocamlopt.opt} -c -dcfg -w +A-70 backend_attributes.ml))
   (with-outputs-to
    backend_attributes.output.corrected
    (run
     ./grep_dump.exe
     %{env:OXCAML_NAME_MANGLING=flat}
     backend_attributes.output.raw)))))

(rule
 (alias runtest)
 (action
  (diff
   backend_attributes.%{env:OXCAML_NAME_MANGLING=flat}.output
   backend_attributes.output.corrected)))
