; Test disabling extensions required for 256/512 bit vectors

(rule
 (alias runtest)
 (enabled_if
  (and
   (= %{context_name} "main")
   (= %{architecture} "amd64")))
 (action
  (diff
   disabled256.%{env:OXCAML_NAME_MANGLING=flat}.expected
   disabled256.corrected)))

(rule
 (enabled_if
  (and
   (= %{context_name} "main")
   (= %{architecture} "amd64")))
 (targets disabled256.corrected)
 (deps
  (:ml disabled256.ml))
 (action
  (setenv
   OCAMLRUNPARAM b=0
   (with-outputs-to
    disabled256.corrected
    (pipe-outputs
     (with-accepted-exit-codes
      2
      (run
       %{bin:ocamlopt.opt}
       %{ml}
       -extension
       simd
       -color
       never
       -error-style
       short
       -fno-avx))
     (run head -n 1))))))
